# social_network_api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  conftest.py
backend/apps/comments/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/comments/tests/: __init__.py  test_api.py
backend/apps/core/: __init__.py  apps.py  cache.py  exceptions.py  idempotency.py  middleware.py  mixins.py  models.py  pagination.py  permissions.py  query_optimization.py
backend/apps/follows/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/likes/: __init__.py  admin.py  apps.py  models.py
backend/apps/posts/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/users/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/config/: asgi.py  urls.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py
backend/requirements/: base.txt  dev.txt  prod.txt
certs/: generate-certs.sh
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CreatePost.css  CreatePost.tsx  Navbar.css  Navbar.tsx  PostCard.css  PostCard.tsx
frontend/src/hooks/: useComments.ts  usePosts.ts  useUsers.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Auth.css  Home.css  Home.tsx  Login.tsx  Profile.css  Profile.tsx  Register.tsx
frontend/src/stores/: authStore.ts
frontend/src/types/: index.ts
(+11 files in other folders)
